crates/uitest/fixtures/parser/type_.snap
---
source: crates/uitest/tests/parser.rs
expression: diags
input_file: crates/uitest/fixtures/parser/type_.fe
---
error[1-0001]: expected type parameter
  ┌─ type_.fe:1:16
  │
1 │ type Result<T, = Result<T, E>
  │                ^ expected type parameter

error[1-0001]: expected closing `>`
  ┌─ type_.fe:1:16
  │
1 │ type Result<T, = Result<T, E>
  │                ^ expected closing `>`


